Add 3 layers of fonts and add link to google font reference
Added 3 fonts, first Roboto, then Arial, and verdana.

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,6 +1,7 @@
 /* using 21px @ 1.333 ratio modular scale*/
 
 html {
+  font-family: 'Roboto', Arial, Verdana;
   padding: 0.739em; /* 11.818/16 = 0.739*/
   /* Using this color pallette: http://paletton.com/#uid=53Z0u0kasvP2KSc6dHqfoqSl0ln*/
   background-color: #8081B1;
