Add ol and li elements and put the inputs inside of them
Added and unordered list containing the input boxes. Also added a background color to form

--- a/css/screen.css
+++ b/css/screen.css
@@ -13,6 +13,10 @@ body {
   padding: 1em;
 }
 
+form {
+  background-color: #585A95;
+}
+
 h1 {
   font-size: 1.777em /* 37.315/21 = 1.777 */;
   padding-bottom: 1em;
