--- a/css/screen.css
+++ b/css/screen.css
@@ -24,8 +24,8 @@ p {
 #rtximg img {
   width: auto;
   height: auto;
-  max-width: 33%;
-  max-height: 33%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 h1 {
@@ -36,4 +36,14 @@ h1 {
 
 ol, li, p{
   padding: 1em;
+}
+
+@media screen and (min-width: 72.5em) { /* 1160px / 16 =*/
+  
+  #rtximg img {
+    width: auto;
+    height: auto;
+    max-width: 33%;
+    max-height: 33%;
+  }
 }
