--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,4 @@
-/* using 21px @ 1.333 ratio modular scale*/
+/* using 21px @ 1.333 ratio modular scale https://www.modularscale.com/?21&px&1.333*/
 
 html {
   font-family: 'Poppins', Arial, Verdana; /* All 3 of these fonts are from the sans-serif family */
@@ -9,12 +9,16 @@ html {
 }
 
 body {
-  font-size: 1.313em /* 21/16 = 1.313em*/;
+  font-size: 1.75em /* 27.993/16 = 1.75em*/;
   padding: 1em;
 }
 
 form {
   background-color: #095409;
+}
+
+input {
+  padding: 0.422em;
 }
 
 p {
@@ -54,7 +58,7 @@ ol, li, p{
   #rtximg img {
     width: auto;
     height: auto;
-    max-width: 33%;
+    max-width: 32.8%;
     max-height: 33%;
   }
 }
