--- a/css/screen.css
+++ b/css/screen.css
@@ -27,7 +27,7 @@ input {
 button {
   font-size: 1em;
   border-style: none;
-  width: 20%;
+  width: 100%;
   background-color: #1CA71C;
 }
 
@@ -70,6 +70,10 @@ ol, li, p{
     height: auto;
     max-width: 32.8%;
     max-height: 33%;
+  }
+  
+  button {
+    width: 30%;
   }
 }
 
