Add function to site js and make check box bigger
Added a function in the site js page to check if the user has entered the required information

--- a/css/screen.css
+++ b/css/screen.css
@@ -52,6 +52,10 @@ ol, li, p{
   padding: 1em;
 }
 
+#phonealert-chkbx, #gpunews-chkbx {
+  transform: scale(1.5);
+}
+
 #error {
   color: red;
   padding: 1em;
